[gd_scene load_steps=10 format=3 uid="uid://bh6sprhh7ij22"]

[ext_resource type="Script" path="res://enemies/enemy_base.gd" id="1_4spgw"]
[ext_resource type="Texture2D" uid="uid://dra2mk7t6ek18" path="res://vendor/tinyDungeon/tilemap.png" id="2_0ofl1"]
[ext_resource type="Shader" path="res://materials/damage_material.gdshader" id="2_w3hqs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nq15f"]
resource_local_to_scene = true
shader = ExtResource("2_w3hqs")
shader_parameter/enabled = false
shader_parameter/color = Color(0.93, 0.1488, 0.1488, 0.858824)

[sub_resource type="CircleShape2D" id="CircleShape2D_hmbdh"]
radius = 7.0

[sub_resource type="Animation" id="Animation_wm55x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sv8qf"]
resource_name = "damage"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0550155, 0.103918, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="Animation" id="Animation_xalgo"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333, 0.3, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bgcib"]
_data = {
"RESET": SubResource("Animation_wm55x"),
"damage": SubResource("Animation_sv8qf"),
"death": SubResource("Animation_xalgo")
}

[node name="EnemyBase" type="CharacterBody2D"]
z_index = 4
collision_layer = 2
collision_mask = 15
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_4spgw")
player_damage_interval_s = 2.0
enemy_velocity = 35.0
hp = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_nq15f")
texture = ExtResource("2_0ofl1")
region_enabled = true
region_rect = Rect2(17, 170, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hmbdh")

[node name="DamageShaderPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bgcib")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="DamageShaderPlayer" to="." method="_on_damage_shader_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
